When near end of search, add bonuses to nodes with multiple good move options

--- a/AUTHORS
+++ b/AUTHORS
@@ -106,6 +106,7 @@ Kelly Wilson
 Ken Takusagawa
 kinderchocolate
 Kiran Panditrao (Krgp)
+KJE
 Kojirion
 Krystian Kuzniarek (kuzkry)
 Leonardo Ljubičić (ICCF World Champion)
